adds handlebars functionality for question tree
Handlebars grabs and updates Q&A info as you go through the series (incomplete).

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
   <h1>lm<i>graph</i>tfy</h1>
   <center>
-    <div id="app">
-      <h1>Would you like to make a graph today?</h1>
-      <form>
+    <div id="clickable">
+      <form id="app">
+        <h1>Would you like to make a graph today?</h1>
         <div class="col-md-2 col-md-offset-4">
-          <input type="submit" value="yes" id="question-1-yes" class="btn-lg btn btn-success">
+          <input type="submit" value="yes" id="questionOneYes" class="btn-lg btn btn-success">
         </div>
         <div class="col-md-2"><a href="http://www.google.com" class="btn-lg btn btn-danger">No</a></div>
+      </form>
     </div>
-    </form>
   </center>
   <div id="questions"></div>
   <div id="chart-container" hidden>
