one path in the tree goes to a makeGraph function
TODO: make a graph! Finish the rest of the branches!

--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
 
   <h1>lm<i>graph</i>tfy</h1>
   <center>
-    <div id="clickable">
+    <div id="questions-and-answers">
       <form id="app">
         <h1>Would you like to make a graph today?</h1>
         <div class="col-md-2 col-md-offset-4">
-          <input type="submit" value="yes" id="questionOneYes" class="btn-lg btn btn-success">
+          <input type="submit" value="yes" id="questionOneYes" class="btn-lg btn btn-success question">
         </div>
         <div class="col-md-2"><a href="http://www.google.com" class="btn-lg btn btn-danger">No</a></div>
       </form>
     </div>
   </center>
-  <div id="questions"></div>
   <div id="chart-container" hidden>
     <canvas id="myChart" width="200" height="200"></canvas>
   </div>
