--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <form id="app">
         <h1>Would you like to make a graph today?</h1>
         <div class="col-md-2 col-md-offset-4">
-          <input type="submit" value="yes" id="questionOneYes" class="btn-lg btn btn-success question">
+          <input type="submit" value="Yes" id="questionOneYes" class="btn-lg btn btn-success question">
         </div>
         <div class="col-md-2"><a href="http://www.google.com" class="btn-lg btn btn-danger">No</a></div>
       </form>
     </div>
   </center>
-  <div id="chart-container" hidden>
-    <canvas id="myChart" width="200" height="200"></canvas>
+  <div id="chart-container" class="col-md-12" hidden>
+    <canvas id="myChart" style="max-width:100"></canvas>
   </div>
 
 
