saving and sending graph data - stubbing out functions

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
   </center>
   <div id="chart-container" class="col-md-12" hidden>
+    <input type="submit" class="btn btn-success" value="Save Graph" id="save-graph">
     <canvas id="myChart" style="max-width:100"></canvas>
   </div>
 
