error message on save without sign in, modal hide on sign in.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   </center>
   <div id="chart-container" class="col-md-12" hidden>
     <input type="submit" class="btn btn-success" value="Save Graph" id="save-graph">
+    <div id="error-message" hidden>You need to sign to save.</div>
     <canvas id="myChart" style="max-width:100"></canvas>
   </div>
 
