--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   </center>
   <div id="chart-container" class="col-md-12" hidden>
     <input type="submit" class="btn btn-success" value="Save Graph" id="save-graph">
+    <div id="edit-container" hidden><input type="submit" class="btn btn-warning" value="Edit Saved Graph" id="edit-graph">
+    <input id="delete-graph" type="submit" class="btn btn-danger" value="Delete Saved Graph"></div>
     <div id="error-message" hidden>You need to sign to save.</div>
     <canvas id="myChart" style="max-width:100"></canvas>
   </div>
