prev/next buttons cycle through saved graphs

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
       </div>
     </div>
   </nav>
-
+  <div id="graph-navigators" hidden>
+    <button id="prev-graph" class="btn btn-default col-md-2 col-md-offset-8">
+      Prev
+    </button>
+    <button id="next-graph" class="btn btn-default col-md-2">
+      Next
+    </button>
+  </div>
 
   <h1>lm<i>graph</i>tfy</h1>
   <center>
@@ -53,14 +60,6 @@
     </div>
   </center>
   <div id="delete-message"></div>
-  <div id="graph-navigators" hidden>
-    <button id="prev-graph" class="btn btn-default col-md-6">
-      Prev
-    </button>
-    <button id="next-graph" class="btn btn-default col-md-6">
-      Next
-    </button>
-  </div>
   <div id="chart-container" class="col-md-12" hidden>
     <div id="save-container" hidden><input type="submit" class="btn btn-success" value="Save Graph" id="save-graph"></div>
     <div id="edit-container" hidden>
