prev/next buttons stick to the bottom now

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       </div>
     </div>
   </nav>
-  <div id="graph-navigators" hidden>
+  <nav style='background-color: transparent; border-color: transparent' id="graph-navigators" class="navbar navbar-default navbar-fixed-bottom" hidden>
     <button id="prev-graph" class="btn btn-default col-md-2 col-md-offset-8">
       Prev
     </button>
     <button id="next-graph" class="btn btn-default col-md-2">
       Next
     </button>
-  </div>
+</nav>
 
   <h1>lm<i>graph</i>tfy</h1>
   <center>
