Adds a Start Over button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <div class="col-md-2 col-md-offset-4">
           <input type="submit" value="Yes" id="questionOneYes" class="btn-lg btn btn-success question">
         </div>
-        <div class="col-md-2"><a href="http://www.google.com" class="btn-lg btn btn-danger">No</a></div>
+        <div class="col-md-2">
+          <input type="submit" value="No" id="questionOneNo" class="btn-lg btn btn-danger question"></div>
       </form>
     </div>
   </center>
