proper show/hides

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navigation">
         <span>
-          <a href="http://tara.codes"><input value="Built by Tara!" class="navbar-brand nav-pills btn btn-default nav navbar-left"></input></a>
+          <a target="_blank" href="http://tara.codes"><input value="Built by Tara!" class="navbar-brand nav-pills btn btn-default nav navbar-left"></input></a>
         </span>
         <ul class="nav navbar-nav navbar-right nav-pills">
           <li>
