removes console.logs

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <ul class="nav navbar-nav navbar-right nav-pills">
           <li>
             <div class="btn-group" role="group">
-              <button id="all-graphs" type="button" class="nav-pills btn btn-default">Browse Graph Gallery</button>
+              <button id="all-graphs" type="button" class="navbar-btn nav-pills btn btn-default">Browse Graph Gallery</button>
             </div>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <button type="button" class="btn btn-default" data-toggle="modal" data-target=".bd-sign-up-sign-in">
+            <button type="button" class="btn btn-default navbar-btn" data-toggle="modal" data-target=".bd-sign-up-sign-in">
               <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
                 Sign Up or Sign In
               </a>
@@ -39,10 +39,10 @@
     </div>
   </nav>
   <nav style='background-color: transparent; border-color: transparent' id="graph-navigators" class="navbar navbar-default navbar-fixed-bottom" hidden>
-    <button id="prev-graph" class="btn btn-default col-md-2 col-md-offset-8">
+    <button id="prev-graph" class="btn btn-default col-md-2 col-md-offset-8 navbar-btn">
       Prev
     </button>
-    <button id="next-graph" class="btn btn-default col-md-2">
+    <button id="next-graph" class="btn btn-default col-md-2 navbar-btn">
       Next
     </button>
 </nav>
